--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,16 @@
 # Site settings
-title: A blog about lorem ipsum dolor sit amet
-description: A blog about lorem ipsum dolor sit amet
+title: Emanuele Maso
+description: Personal page
 # baseurl: "/particle" # the subpath of your site, e.g. /blog
 # url: "localhost:3000" # the base hostname & protocol for your site e.g. http://willianjusten.com.br
 
 # User settings
-username: Anon Developer
-user_description: Bicycle rights irony actually neutra typewriter lyft. Man bun taxidermy put a bird on it, umami yr ramps pop-up ugh bushwick chia lo-fi. Occupy bitters pour-over snackwave you probably haven't heard of them small batch. Cornhole mustache man bun letterpress echo park VHS.
-user_title: Software Developer
-email: anon@anon.com
-twitter_username: lorem_ipsum
-github_username:  lorem_ipsum
+username: Emanuele Maso
+user_description: Computer Science student at University of Udine who loves programming and design everything, in particular mobile apps.
+user_title: Front-End Developer
+email: emanuele.maso97@gmail.com
+twitter_username: clarkstoro
+github_username:  clarkstoro
 gplus_username:  lorem_ipsum
 
 # Google-analytics
