--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,8 @@ description: Personal page
 
 # User settings
 username: Emanuele Maso
-user_description: Computer Science student at University of Udine who loves programming and design everything, in particular mobile apps.
+user_description: I'm a Computer Science student at University of Udine who loves programming and design everything, in particular mobile apps.
+I worked as help desk and computer repair technician on a small store and as Junior Web Developer for 5 projects.
 user_title: Front-End Developer
 email: emanuele.maso97@gmail.com
 twitter_username: clarkstoro
