--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: Personal page
 
 # User settings
 username: Emanuele Maso
-user_description: I'm a Computer Science student at University of Udine who loves programming and design everything, in particular mobile apps.&nbsp;I worked as help desk and computer repair technician on a small store and as Junior Dev for 5 projects with a Web Developer.
+user_description: I'm a Computer Science student at University of Udine who loves programming and designing everything, in particular mobile apps.&nbsp;I worked as help desk and computer repair technician on a small store and as Junior Dev for 5 projects with a Web Developer.
 user_title: Front-End Developer
 email: emanuele.maso97@gmail.com
 twitter_username: clarkstoro
